[package]
name = "xns-sdk-rs"
version = "0.1.0"
edition = "2024"
authors = ["Christopher Kelley <ckelley@ghostkellz.sh>"]
description = "Rust SDK for XRPL Name Service (XNS) - resolve .xrp domains on XRP Ledger"
license = "MIT"
keywords = ["xrpl", "xns", "domains", "blockchain", "web3"]
categories = ["cryptography::cryptocurrencies", "network-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encoding/decoding
hex = "0.4"
base64 = "0.21"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Caching
moka = { version = "0.12", features = ["future"] }

# Optional: WebAssembly support
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"

[features]
default = []
wasm = ["wasm-bindgen", "wasm-bindgen-futures"]

[[example]]
name = "resolve_domain"
path = "examples/resolve_domain.rs"

[[example]]
name = "reverse_lookup"
path = "examples/reverse_lookup.rs"
